@@ -23,6 +23,7 @@ Arnaud Quette <arnaud.quette@free.fr>
 Diego Elio Pettenò <flameeyes@flameeyes.eu>
 Kaiwang Chen <kaiwang.chen@gmail.com>
 Jan Safranek <jsafrane@redhat.com>
+Thomas Renninger <trenn@suse.de>
 And others ...
 
 Package Maintainers:
