@@ -1,3 +1,8 @@
+2012-03-06  Thomas Renninger <trenn@suse.de>
+
+	* contrib/Makefile.am, Makefile.am, doc/Makefile.am: Fix docdir
+	usage for newer autotools.
+	
 2012-03-06  Albert Chu <chu11@llnl.gov>
 
  	* Support set sensor reading and event status command.
